UpdateUser functionality added